# ot-harjoitustyo

./: .coveragerc  .env  .env.test  .gitignore  README.md  README.md.save  pyproject.toml  tasks.py
data/: database.sqlite  notes.csv  test_database.sqlite
dokumentaatio/: Arkkitehtuuri.md  Käyttöohje.md  Testaus.md  Testausdokumentti.md  Työaikakirjanpito.md  Vaatimusmäärittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: config.py  database_connection.py  index.py  initialize_database.py
src/entities/: course.py  note.py  user.py
src/repositories/: course_repository.py  csv_repository.py  note_repository.py  user_repository.py
src/services/: tracker_service.py
src/tests/: conftest.py
src/tests/repositories/: course_repository_test.py  note_repository_test.py  user_repository_test.py
src/tests/services/: tracker_service_test.py
src/ui/: .create_view.py.swp  add_course_view.py  add_note_view.py  add_view.py  create_view.py  login_view.py  ui.py  user_view.py
