[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Aino Kuosmanen <aino.kuosmanen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.5.0"
python-dotenv = "^0.17.0"
pytest-dotenv = "^0.5.2"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
